--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if(GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif()
 
-set(SOURCE_FILES main.cpp Core/Browser.hpp Core/Browser.cpp Core/BrowserWidget.hpp Core/BrowserWidget.cpp Core/Application.hpp Core/Application.cpp)
+set(SOURCE_FILES main.cpp Core/Browser.hpp Core/Browser.cpp Core/BrowserWidget.hpp Core/BrowserWidget.cpp Core/Widgets/WebPage.hpp Core/Widgets/WebPage.cpp Core/Widgets/WebView.hpp Core/Widgets/WebView.cpp)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
