--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
-
 cmake_minimum_required(VERSION 3.6)
 project(browthon_app)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/Core)
@@ -11,8 +10,7 @@ if(GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif()
 
-set(SOURCE_FILES main.cpp Core/Browser.hpp Core/Browser.cpp Core/BrowserWidget.hpp Core/BrowserWidget.cpp Core/Widgets/WebPage.hpp Core/Widgets/WebPage.cpp Core/Widgets/WebView.hpp Core/Widgets/WebView.cpp)
-set(CMAKE_CXX_STANDARD 17)
+set(SOURCE_FILES main.cpp Core/Browser.hpp Core/Browser.cpp Core/BrowserWidget.hpp Core/BrowserWidget.cpp Core/Widgets/WebPage.hpp Core/Widgets/WebPage.cpp Core/Widgets/WebView.hpp Core/Widgets/WebView.cpp Core/Widgets/UrlInput.hpp Core/Widgets/UrlInput.cpp Core/Widgets/TabWidget.hpp Core/Widgets/TabWidget.cpp)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
